minor typo correction

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -15,7 +15,7 @@ and open the template in the editor.
         <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
     </head>
     <body>
-        <!-- SOCILA MEDIA SECTION =========================== -->
+        <!-- SOCIAL MEDIA SECTION =========================== -->
         <section></section>
 
         <!-- BOOTSTRAP CORE JAVASCRIPT
